@@ -1,6 +1,6 @@
 You can make an install package (SetupR.exe) in the usual Windows style
 (by default in Windows 2000 style) by using the installer kit 
-Inno Setup 2.0.9 or later from www.jrsoftware.org. 
+Inno Setup 2.0.17 or later from www.jrsoftware.org. 
 
 You need the R installation built completely (see ../INSTALL: this
 includes making bitmap and Tcl/Tk support and the manuals).
