@@ -58,6 +58,7 @@ WizardSmallImageFile=R.bmp
 UsePreviousAppDir=no
 ChangesAssociations=yes
 DiskSpanning=yes
+Compression=bzip
 
 [Types]
 Name: "minimal"; Description: "Minimal user installation"
